Added FOW script

--- a/zscore_config.yaml
+++ b/zscore_config.yaml
@@ -41,6 +41,18 @@ zscore_stats:
     sort_order: desc
     reverse_sign: false
     weight: 0.5
+  - name: FOW%
+    sort_order: desc
+    reverse_sign: false
+    weight: 0.3
+  - name: PP%
+    sort_order: desc
+    reverse_sign: false
+    weight: 0.5
+  - name: PK%
+    sort_order: desc
+    reverse_sign: false
+    weight: 0.5
 
 
 
